[gd_scene load_steps=36 format=3 uid="uid://1pcqrq26ttuc"]

[ext_resource type="Script" uid="uid://cfyb634vv0qev" path="res://scripts/suicidechaser.gd" id="1_kofei"]
[ext_resource type="Texture2D" uid="uid://bkrk3n8v2682d" path="res://Enemies/AngryPig/Run (36x30).png" id="2_qm0wa"]
[ext_resource type="Texture2D" uid="uid://c455uw6dge7ix" path="res://Enemies/AngryPig/Idle (36x30).png" id="3_qm0wa"]
[ext_resource type="Texture2D" uid="uid://cji6efrhcr1gh" path="res://Enemies/AngryPig/Hit 2 (36x30).png" id="3_r1xrh"]

[sub_resource type="AtlasTexture" id="AtlasTexture_r1xrh"]
atlas = ExtResource("2_qm0wa")
region = Rect2(0, 0, 36, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_uhdnt"]
atlas = ExtResource("2_qm0wa")
region = Rect2(36, 0, 36, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_mujdo"]
atlas = ExtResource("2_qm0wa")
region = Rect2(72, 0, 36, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_1qg3p"]
atlas = ExtResource("2_qm0wa")
region = Rect2(108, 0, 36, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_v2ram"]
atlas = ExtResource("2_qm0wa")
region = Rect2(144, 0, 36, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_yeym5"]
atlas = ExtResource("2_qm0wa")
region = Rect2(180, 0, 36, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_2xpvu"]
atlas = ExtResource("2_qm0wa")
region = Rect2(216, 0, 36, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_euh2h"]
atlas = ExtResource("2_qm0wa")
region = Rect2(252, 0, 36, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_113sf"]
atlas = ExtResource("2_qm0wa")
region = Rect2(288, 0, 36, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_44xe2"]
atlas = ExtResource("2_qm0wa")
region = Rect2(324, 0, 36, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_t8pb1"]
atlas = ExtResource("2_qm0wa")
region = Rect2(360, 0, 36, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_85old"]
atlas = ExtResource("2_qm0wa")
region = Rect2(396, 0, 36, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_budjm"]
atlas = ExtResource("3_r1xrh")
region = Rect2(144, 0, 36, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_5d4aq"]
atlas = ExtResource("3_r1xrh")
region = Rect2(108, 0, 36, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_lw30u"]
atlas = ExtResource("3_r1xrh")
region = Rect2(72, 0, 36, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_lr0s3"]
atlas = ExtResource("3_r1xrh")
region = Rect2(36, 0, 36, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_gwfp1"]
atlas = ExtResource("3_r1xrh")
region = Rect2(0, 0, 36, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_a0f67"]
atlas = ExtResource("3_qm0wa")
region = Rect2(0, 0, 36, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_if32r"]
atlas = ExtResource("3_qm0wa")
region = Rect2(36, 0, 36, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_dejg6"]
atlas = ExtResource("3_qm0wa")
region = Rect2(72, 0, 36, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_30avs"]
atlas = ExtResource("3_qm0wa")
region = Rect2(108, 0, 36, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_lejes"]
atlas = ExtResource("3_qm0wa")
region = Rect2(144, 0, 36, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_c5n2u"]
atlas = ExtResource("3_qm0wa")
region = Rect2(180, 0, 36, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_psn16"]
atlas = ExtResource("3_qm0wa")
region = Rect2(216, 0, 36, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_o7wea"]
atlas = ExtResource("3_qm0wa")
region = Rect2(252, 0, 36, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_gyjl0"]
atlas = ExtResource("3_qm0wa")
region = Rect2(288, 0, 36, 30)

[sub_resource type="SpriteFrames" id="SpriteFrames_a0f67"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r1xrh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uhdnt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mujdo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1qg3p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v2ram")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yeym5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2xpvu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_euh2h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_113sf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_44xe2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t8pb1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_85old")
}],
"loop": true,
"name": &"chase",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_budjm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5d4aq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lw30u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lr0s3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gwfp1")
}],
"loop": false,
"name": &"death",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a0f67")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_if32r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dejg6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_30avs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lejes")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c5n2u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_psn16")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o7wea")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gyjl0")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_if32r"]
size = Vector2(22, 18)

[sub_resource type="CircleShape2D" id="CircleShape2D_dejg6"]
radius = 128.004

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qm0wa"]
size = Vector2(20, 21)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r1xrh"]
size = Vector2(28, 16)

[node name="suicidechaser" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_kofei")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_a0f67")
animation = &"death"
frame = 4
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 6)
shape = SubResource("RectangleShape2D_if32r")

[node name="PlayerDetection" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
shape = SubResource("CircleShape2D_dejg6")

[node name="vulnerability" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="vulnerability"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_qm0wa")

[node name="damage" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="damage"]
position = Vector2(0, 7)
shape = SubResource("RectangleShape2D_r1xrh")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="PlayerDetection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="." method="_on_player_detection_body_exited"]
[connection signal="body_entered" from="vulnerability" to="." method="_on_vulnerability_body_entered"]
[connection signal="body_entered" from="damage" to="." method="_on_damage_body_entered"]
